Added subjects, progressBar and smaller changes to s3 submission

--- a/src/app.html
+++ b/src/app.html
@@ -1,6 +1,9 @@
 <!doctype html>
 <html lang="en">
 	<head>
+		<link rel="stylesheet" href="https://ts4nfdi.github.io/terminology-service-suite/js-modules/latest/terminology-service-suite.min.css">
+	    <script type="text/javascript" src="https://ts4nfdi.github.io/terminology-service-suite/js-modules/latest/terminology-service-suite.min.js"></script>
+
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
